--- a/manifest.json
+++ b/manifest.json
@@ -278,6 +278,20 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api/JeremyAnsel.Media.WavefrontObj.ObjMaterialFileReaderSettings.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/JeremyAnsel.Media.WavefrontObj.ObjMaterialFileReaderSettings.html"
+        }
+      },
+      "version": "",
+      "Uid": null,
+      "IsMRef": true,
+      "Title": "JeremyAnsel.Media.WavefrontObj.ObjMaterialFileReaderSettings",
+      "Summary": "<p sourcefile=\"api/JeremyAnsel.Media.WavefrontObj.ObjMaterialFileReaderSettings.yml\" sourcestartlinenumber=\"1\">Settings to control the behaviour of the ObjMaterialFileReader</p>\n"
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api/JeremyAnsel.Media.WavefrontObj.ObjMaterialMap.yml",
       "output": {
         ".html": {
