Update doc generated by CI

--- a/manifest.json
+++ b/manifest.json
@@ -162,7 +162,7 @@
       "Uid": null,
       "IsMRef": true,
       "Title": "JeremyAnsel.Media.WavefrontObj.ObjFileReaderSettings",
-      "Summary": "<p sourcefile=\"api/JeremyAnsel.Media.WavefrontObj.ObjFileReaderSettings.yml\" sourcestartlinenumber=\"1\">Settings to control the behaviour of the ObjFileReader</p>\n"
+      "Summary": "<p sourcefile=\"api/JeremyAnsel.Media.WavefrontObj.ObjFileReaderSettings.yml\" sourcestartlinenumber=\"1\">Settings to control the behaviour of the <xref href=\"JeremyAnsel.Media.WavefrontObj.ObjFileReader\" data-throw-if-not-resolved=\"false\"></xref></p>\n"
     },
     {
       "type": "ManagedReference",
@@ -288,7 +288,7 @@
       "Uid": null,
       "IsMRef": true,
       "Title": "JeremyAnsel.Media.WavefrontObj.ObjMaterialFileReaderSettings",
-      "Summary": "<p sourcefile=\"api/JeremyAnsel.Media.WavefrontObj.ObjMaterialFileReaderSettings.yml\" sourcestartlinenumber=\"1\">Settings to control the behaviour of the ObjMaterialFileReader</p>\n"
+      "Summary": "<p sourcefile=\"api/JeremyAnsel.Media.WavefrontObj.ObjMaterialFileReaderSettings.yml\" sourcestartlinenumber=\"1\">Settings to control the behaviour of the <xref href=\"JeremyAnsel.Media.WavefrontObj.ObjMaterialFileReader\" data-throw-if-not-resolved=\"false\"></xref></p>\n"
     },
     {
       "type": "ManagedReference",
